--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dependencies:
   shared_preferences: ^2.2.3
   # Wraps platform-specific persistent storage for simple data (NSUserDefaults on iOS, SharedPreferences on Android)
   # Could be used to store the 'driverUniqueID' locally on the device
-
+  workmanager: ^0.5.2
+  background_fetch: ^1.1.3
 
   cupertino_icons: ^1.0.6 # Package for iOS-style icons
   # The following adds the Cupertino Icons font to your application.
