--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   # Could be used to store the 'driverUniqueID' locally on the device
   workmanager: ^0.5.2
   background_fetch: ^1.1.3
+  flutter_foreground_task: ^7.5.0
 
   cupertino_icons: ^1.0.6 # Package for iOS-style icons
   # The following adds the Cupertino Icons font to your application.
